crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@function_in_finally.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/function_in_finally.js
---
digraph {
    0 [ label = ""]
    1 [ label = ""]
    2 [ label = ""]
    3 [ label = ""]
    4 [ label = ""]
    5 [ label = "Unreachable()"]
    6 [ label = ""]
    7 [ label = ""]
    8 [ label = ""]
    9 [ label = ""]
    0 -> 1 [ ]
    0 -> 2 [ ]
    1 -> 2 [ ]
    2 -> 3 [ ]
    2 -> 4 [ ]
    4 -> 5 [ ]
    1 -> 6 [ ]
    6 -> 7 [ ]
    6 -> 8 [ ]
    8 -> 9 [ ]
}
