crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@if_else.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/if_else.js
---
digraph {
    0 [ label = ""]
    1 [ label = ""]
    2 [ label = ""]
    3 [ label = ""]
    4 [ label = "$return = <value>"]
    5 [ label = ""]
    6 [ label = "Unreachable()"]
    7 [ label = "$return = <value>"]
    8 [ label = ""]
    9 [ label = "Unreachable()"]
    10 [ label = ""]
    11 [ label = "Unreachable()\n$return = <value>"]
    12 [ label = ""]
    13 [ label = "Unreachable()"]
    14 [ label = ""]
    0 -> 1 [ ]
    1 -> 2 [ ]
    1 -> 3 [ ]
    2 -> 3 [ ]
    5 -> 6 [ ]
    8 -> 9 [ ]
    10 -> 11 [ ]
    6 -> 10 [ ]
    3 -> 4 [ ]
    3 -> 7 [ ]
    9 -> 10 [ ]
    12 -> 13 [ ]
    0 -> 14 [ ]
}
