crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@if_stmt_in_for_in.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/if_stmt_in_for_in.js
---
digraph {
    0 [ label = ""]
    1 [ label = ""]
    2 [ label = ""]
    3 [ label = ""]
    4 [ label = ""]
    5 [ label = ""]
    6 [ label = "Unreachable()\nbreak"]
    7 [ label = ""]
    8 [ label = ""]
    9 [ label = "Unreachable()"]
    10 [ label = "Unreachable()"]
    11 [ label = ""]
    12 [ label = ""]
    13 [ label = ""]
    14 [ label = ""]
    0 -> 1 [ ]
    5 -> 6 [ ]
    5 -> 6 [ ]
    8 -> 9 [ ]
    9 -> 10 [ ]
    8 -> 10 [ ]
    10 -> 11 [ ]
    7 -> 8 [ ]
    7 -> 11 [ ]
    6 -> 12 [ ]
    4 -> 5 [ ]
    4 -> 7 [ ]
    11 -> 12 [ ]
    1 -> 2 [ ]
    2 -> 3 [ ]
    3 -> 4 [ ]
    12 -> 3 [ ]
    3 -> 13 [ ]
    9 -> 3 [ ]
    0 -> 14 [ ]
}
