crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@import_as_function.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/import_as_function.js
---
digraph {
    0 [ label = ""]
    1 [ label = ""]
    0 -> 1 [ ]
}
