crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@infix_operators.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/infix_operators.js
---
digraph {
    0 [ label = "" ]
    1 [ label = "ExpressionStatement\nExpressionStatement" ]
    2 [ label = "" ]
    3 [ label = "" ]
    1 -> 0 [ label = Error(Implicit) ]
    2 -> 0 [ label = Error(Implicit) ]
    3 -> 0 [ label = Error(Implicit) ]
    1 -> 2 [ label = Normal ]
    1 -> 3 [ label = Normal ]
    2 -> 3 [ label = Normal ]
}
