crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@labeled_block_break.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/labeled_block_break.js
---
digraph {
    0 [ label = "" ]
    1 [ label = "TryStatement" ]
    2 [ label = "" ]
    3 [ label = "BlockStatement" ]
    4 [ label = "LabeledStatement\nBlockStatement\nIfStatement" ]
    5 [ label = "BlockStatement\nbreak <LABEL>" ]
    6 [ label = "unreachable" ]
    7 [ label = "" ]
    8 [ label = "" ]
    9 [ label = "" ]
    1 -> 0 [ label = "Error(Implicit)" ]
    3 -> 2 [ label = "Error(Explicit)" ]
    4 -> 0 [ label = "Error(Implicit)" ]
    2 -> 4 [ label = "Normal" ]
    5 -> 0 [ label = "Error(Implicit)" ]
    6 -> 0 [ label = "Error(Implicit)" ]
    5 -> 6 [ label = "Unreachable" , style = "dotted" ]
    7 -> 0 [ label = "Error(Implicit)" ]
    6 -> 7 [ label = "Normal" ]
    4 -> 5 [ label = "Normal" ]
    4 -> 7 [ label = "Normal" ]
    8 -> 0 [ label = "Error(Implicit)" ]
    7 -> 8 [ label = "Normal" ]
    5 -> 8 [ label = "Jump" ]
    9 -> 0 [ label = "Error(Implicit)" ]
    1 -> 3 [ label = "Normal" ]
    3 -> 9 [ label = "Normal" ]
    8 -> 9 [ label = "Normal" ]
}
