crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@labelled_try_break.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/labelled_try_break.js
---
digraph {
    0 [ label = "VariableDeclaration" ]
    1 [ label = "LabeledStatement\nTryStatement" ]
    2 [ label = "" ]
    3 [ label = "BlockStatement\nreturn <value>" ]
    4 [ label = "unreachable" ]
    5 [ label = "break <label>" ]
    6 [ label = "unreachable" ]
    7 [ label = "" ]
    8 [ label = "return <value>" ]
    9 [ label = "unreachable" ]
    10 [ label = "" ]
    0 -> 1 [ label = "NewFunction" ]
    3 -> 2 [ label = "Finalize" ]
    4 -> 2 [ label = "Finalize" ]
    3 -> 4 [ label = "Unreachable" , style = "dotted" ]
    2 -> 5 [ label = "Normal" ]
    5 -> 6 [ label = "Unreachable" , style = "dotted" ]
    1 -> 3 [ label = "Normal" ]
    6 -> 7 [ label = "Join" ]
    7 -> 8 [ label = "Normal" ]
    5 -> 8 [ label = "Jump" ]
    8 -> 9 [ label = "Unreachable" , style = "dotted" ]
    0 -> 10 [ label = "Normal" ]
}
