crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@logical_expressions_short_circuit.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/logical_expressions_short_circuit.js
---
digraph {
    0 [ label = "" ]
    1 [ label = "IfStatement" ]
    2 [ label = "" ]
    3 [ label = "" ]
    4 [ label = "BlockStatement\nExpressionStatement" ]
    5 [ label = "IfStatement" ]
    6 [ label = "" ]
    7 [ label = "" ]
    8 [ label = "ExpressionStatement" ]
    9 [ label = "IfStatement" ]
    10 [ label = "" ]
    11 [ label = "" ]
    12 [ label = "ExpressionStatement" ]
    13 [ label = "" ]
    1 -> 0 [ label = "Error(Implicit)" ]
    2 -> 0 [ label = "Error(Implicit)" ]
    3 -> 0 [ label = "Error(Implicit)" ]
    1 -> 2 [ label = "Normal" ]
    1 -> 3 [ label = "Normal" ]
    2 -> 3 [ label = "Normal" ]
    4 -> 0 [ label = "Error(Implicit)" ]
    5 -> 0 [ label = "Error(Implicit)" ]
    4 -> 5 [ label = "Normal" ]
    3 -> 4 [ label = "Normal" ]
    3 -> 5 [ label = "Normal" ]
    6 -> 0 [ label = "Error(Implicit)" ]
    7 -> 0 [ label = "Error(Implicit)" ]
    5 -> 6 [ label = "Normal" ]
    5 -> 7 [ label = "Normal" ]
    6 -> 7 [ label = "Normal" ]
    8 -> 0 [ label = "Error(Implicit)" ]
    9 -> 0 [ label = "Error(Implicit)" ]
    8 -> 9 [ label = "Normal" ]
    7 -> 8 [ label = "Normal" ]
    7 -> 9 [ label = "Normal" ]
    10 -> 0 [ label = "Error(Implicit)" ]
    11 -> 0 [ label = "Error(Implicit)" ]
    9 -> 10 [ label = "Normal" ]
    9 -> 11 [ label = "Normal" ]
    10 -> 11 [ label = "Normal" ]
    12 -> 0 [ label = "Error(Implicit)" ]
    13 -> 0 [ label = "Error(Implicit)" ]
    12 -> 13 [ label = "Normal" ]
    11 -> 12 [ label = "Normal" ]
    11 -> 13 [ label = "Normal" ]
}
