crates/oxc_semantic/tests/integration/snapshots/integration__cfg__cfg_files@member_access_with_numbered_index.js-2.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: output.cfg_dot_diagram()
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/member_access_with_numbered_index.js
---
digraph {
    0 [ label = "" ]
    1 [ label = "" ]
    2 [ label = "" ]
    3 [ label = "return <value>" ]
    4 [ label = "unreachable\nreturn <value>" ]
    5 [ label = "unreachable" ]
    6 [ label = "" ]
    1 -> 0 [ label = "Error(Implicit)" ]
    3 -> 2 [ label = "Error(Implicit)" ]
    1 -> 3 [ label = "NewFunction" ]
    4 -> 2 [ label = "Error(Implicit)" , style = "dotted" ]
    3 -> 4 [ label = "Unreachable" , style = "dotted" ]
    5 -> 2 [ label = "Error(Implicit)" , style = "dotted" ]
    4 -> 5 [ label = "Unreachable" , style = "dotted" ]
    6 -> 0 [ label = "Error(Implicit)" ]
    1 -> 6 [ label = "Normal" ]
}
